@@ -32,6 +32,7 @@ namespace geom { // geos::geom
 INLINE 
 MultiLineString::MultiLineString(const MultiLineString &mp)
 	:
+	Geometry(mp),
 	GeometryCollection(mp)
 {
 }
